# ft_irc

./: .gitignore  CMakeLists.txt  FT_IRC.h  Fixed  Makefile  a.out  ircserv  main.cpp  server
abstract/server/: Server.cpp  Server.hpp
abstract/socket/: Socket.cpp  Socket.hpp
commands/: channel.cpp  channel.hpp  cmd.cpp  commands.cpp
interfaces/server/: Server.cpp  Server.hpp
interfaces/server_interface/: server.cpp  server.hpp
models/client/: client.cpp  client.hpp
models/client/channel/: channel.cpp  channel.hpp
models/client/channel/channel_manager/: channel_manager.cpp  channel_manager.hpp
models/client/client_manager/: client_manager.cpp  client_manager.hpp
modules/client/entity/: client.cpp  client.hpp
modules/client/repoitory/: client.repository.cpp  client.repository.hpp
mouarsas/: server  sevr.cpp
naizame/: a.out  commands.cpp  server
server/: IrcServer.cpp  IrcServer.hpp
server/irc/: IrcServer.cpp  IrcServer.hpp
server/irc/channel/: channel.cpp  channel.hpp
server/irc/commands/: Commands.cpp  Commands.hpp
server/irc/commands/cmd/: bot.cpp  invite_cmd.cpp  kickCmd.cpp
server/irc/commands/cmds/: invite_cmd.cpp
